# MTH058-2026-GLiNER2

./: .gitignore  AGENTS.md  Dockerfile  README.md  fnox.toml  mise.toml  prek.toml  pyproject.toml  requirements.txt  ruff.toml  skills-lock.json
.gemini/: settings.json
docs/: 000-scripts.md  001-plan.md
docs/superpowers/plans/: 2026-03-19-local-incident-intake-plan.md  2026-03-19-triage-card-improvement.md  2026-03-20-fix-lint-errors.md
docs/superpowers/specs/: 2026-03-19-local-incident-intake-design.md  2026-03-19-triage-card-improvement-design.md
src/mth058/: gradio_app.py  main.py  models.py
src/mth058/data/: fixtures.py  sample_incident.json  theme.css  triage_card.html
src/mth058/services/: __init__.py  classifier.py  extractor.py  orchestrator.py  redactor.py  similarity.py
src/mth058/ui/: app.py  formatters.py  interface.py  theme.py
tests/: test_data.py  test_formatters.py  test_orchestrator.py  test_services.py  test_triage_logic.py
