[project]
name = "mth058"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Kỳ", email = "40734986+itskyf@users.noreply.github.com" }]
dependencies = [
  "gliner2>=1.2.4",
  "gradio>=6.9.0",
  "requests>=2.32.5",
  "urllib3>=2.6.3",
]

[project.scripts]
mth058 = "mth058:main"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
