[project]
name = "mth058"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Kỳ", email = "40734986+itskyf@users.noreply.github.com" }]
dynamic = ["dependencies"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-runtime.txt"] }
