[project]
name = "mth058"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
authors = [{ name = "Kỳ", email = "40734986+itskyf@users.noreply.github.com" }]
dependencies = [
  "gliner2~=1.2",
  "gradio~=6.9",
  "minijinja~=2.18",
  "polars~=1.39",
  "requests~=2.32",
  "urllib3~=2.6",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
